--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -25,9 +25,10 @@ jobs:
 
     - name: Install deps
       shell: bash
+      working_directory: bin
       run: |
-       wget -O /usr/local/bin/bazel https://github.com/bazelbuild/bazelisk/releases/latest/download/bazelisk-linux-amd64
-       chmod +x /usr/local/bin/bazel
+       wget -O bazel https://github.com/bazelbuild/bazelisk/releases/latest/download/bazelisk-linux-amd64
+       chmod +x bazel
        apt-get install libtool cmake automake autoconf make ninja-build curl unzip virtualenv
        mkdir clang9
        cd clang9
@@ -35,6 +36,7 @@ jobs:
        tar -xf clang+llvm-9.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz --strip-components 1
        cd ..
        export CLANG_TOOLCHAIN=clang9
+       export PATH=bin:$PATH
        export CC=$CLANG_TOOLCHAIN/bin/clang
        export CXX=$CLANG_TOOLCHAIN/bin/clang++
 
