--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -43,6 +43,7 @@ jobs:
     - name: Build
       shell: bash
       run: |
+       shopt -s extglob
        bazel build //source/exe:envoy-static --spawn_strategy=local
 
     - name: Perform CodeQL Analysis
