--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -29,7 +29,7 @@ jobs:
        mkdir bin
        wget -O bin/bazel https://github.com/bazelbuild/bazelisk/releases/latest/download/bazelisk-linux-amd64
        chmod +x bin/bazel
-       sudo apt-get install libtool cmake automake autoconf make ninja-build curl unzip virtualenv
+       sudo apt-get install libtool cmake automake autoconf make ninja-build curl unzip virtualenv openjdk-8-jdk build-essential
        mkdir bin/clang9
        cd bin/clang9
        wget https://releases.llvm.org/9.0.0/clang+llvm-9.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz
