--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -44,7 +44,7 @@ jobs:
       shell: bash
       run: |
        bazel shutdown
-       bazel build -c fastbuild --spawn_strategy=local --discard_analysis_cache --nouse_action_cache //source/exe:envoy-static
+       bazel build -c fastbuild --spawn_strategy=local --discard_analysis_cache --nouse_action_cache //source/exe:envoy-static --verbose_failures
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
