--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -29,7 +29,7 @@ jobs:
        mkdir bin
        wget -O bin/bazel https://github.com/bazelbuild/bazelisk/releases/latest/download/bazelisk-linux-amd64
        chmod +x bin/bazel
-       sudo apt-get update && sudo apt-get install libtool cmake automake autoconf make ninja-build curl unzip virtualenv openjdk-11-jdk build-essential
+       sudo apt-get update && sudo apt-get install libtool cmake automake autoconf make ninja-build curl unzip virtualenv openjdk-11-jdk build-essential libc++1
        mkdir bin/clang9
        cd bin/clang9
        wget https://releases.llvm.org/9.0.0/clang+llvm-9.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz
@@ -43,9 +43,9 @@ jobs:
     - name: Build
       shell: bash
       run: |
-       /bin/bash --version
+       bazel/setup_clang.sh bin/clang9
        bazel shutdown
-       bazel build -c fastbuild --spawn_strategy=local --discard_analysis_cache --nouse_action_cache //source/exe:envoy-static --verbose_failures
+       bazel build -c fastbuild --spawn_strategy=local --discard_analysis_cache --nouse_action_cache --config clang --config libc++ //source/exe:envoy-static --verbose_failures
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
