--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -5,7 +5,6 @@ on:
 
 jobs:
   CodeQL-Build:
-
     strategy:
       fail-fast: false
 
@@ -27,6 +26,9 @@ jobs:
       shell: bash
       run: |
        ls
+       whereis bazelisk
+       whereis bazel
+       bazel --version
        mkdir bin
        wget -O bin/bazel https://github.com/bazelbuild/bazelisk/releases/latest/download/bazelisk-linux-amd64
        chmod +x bin/bazel
