--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -25,32 +25,19 @@ jobs:
     - name: Install deps
       shell: bash
       run: |
-       ls
-       whereis bazelisk
-       whereis bazel
-       bazel --version
-       mkdir bin
-       wget -O bin/bazel https://github.com/bazelbuild/bazelisk/releases/latest/download/bazelisk-linux-amd64
-       chmod +x bin/bazel
        sudo apt-get update && sudo apt-get install libtool cmake automake autoconf make ninja-build curl unzip virtualenv openjdk-11-jdk build-essential libc++1
-       mkdir bin/clang9
+       mkdir -p bin/clang9
        cd bin/clang9
        wget https://releases.llvm.org/9.0.0/clang+llvm-9.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz
        tar -xf clang+llvm-9.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz --strip-components 1
-       export PATH=bin:$PATH
 
     - name: Build
       run: |
-       ls
-       echo $PATH
-       ls bin
        export PATH=bin/clang9/bin:$PATH
-       echo $PATH
+       alias bazel=/usr/local/bin/bazelisk
+       bazel/setup_clang.sh bin/clang9
        bazel --version
        clang --version
-       bazel/setup_clang.sh bin/clang9
-       clang --version
-       cat clang.bazelrc
        bazel shutdown
        bazel build -c fastbuild --spawn_strategy=local --discard_analysis_cache --nouse_action_cache --config clang --config libc++ //source/exe:envoy-static --verbose_failures
 
